--- a/src/stylesheets/profile.css
+++ b/src/stylesheets/profile.css
@@ -7,13 +7,14 @@
 }
 
 .picture {
-  width: 45%;
+  width: 400px;
   padding: 10px 10px;
   object-fit: cover;
   text-align: center;
 }
 
-.description {
-  width: 45%;
-  padding: 10px 10px;
+.profile-description {
+  width: 100%;
+  padding: 10px 0px;
+  font-size: medium;
 }
