--- a/src/stylesheets/snap-layout.css
+++ b/src/stylesheets/snap-layout.css
@@ -10,6 +10,7 @@ html {
 .snap-section {
   border-bottom: 1px solid white;
   padding: 1rem;
+  width: 100vw;
   height: 100vh;
   scroll-snap-align: start;
   text-align: center;
