--- a/src/stylesheets/work.css
+++ b/src/stylesheets/work.css
@@ -7,12 +7,12 @@
 }
 
 .titles {
-  width: 45%;
+  width: 100%;
   padding: 10px 10px;
   text-align: center;
 }
 
-.description {
-  width: 45%;
+.work-description {
+  width: 100%;
   padding: 10px 10px;
 }
