--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -2,12 +2,72 @@
   background-color: #ead1dc;
   display: flex;
   flex-direction: column;
+}
+
+.projects {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px 10px;
+  text-align: left;
+}
+
+.card {
+  background-color: #0275d8;
+  width: 300px;
+  height: 270px;
+  font-size: small;
+  text-align: left;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.card-title {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 10%;
+  background-color: #0275d8;
+  color: white;
+
+  border-radius: 10px;
+}
+
+.card-title h4 {
+  margin: 0 0;
+  padding-left: 5px;
+}
+
+.card-content {
+  width: 100%;
+  height: 80%;
+  margin: 0 0;
+  padding: 5px 10px;
+  background-color: #e9e9e9;
+}
+
+.card-footer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 10%;
+  background-color: #0275d8;
+  color: white;
+
+  border-radius: 10px;
+}
+
+.source-code-panel {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.projects {
-  width: 45%;
-  padding: 10px 10px;
-  text-align: center;
+.source-code-button {
+  width: 300px;
+  padding: 5px 5px;
+  margin: 5px;
+  border-radius: 5px;
 }
