--- a/src/stylesheets/skills.css
+++ b/src/stylesheets/skills.css
@@ -11,6 +11,8 @@
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  align-items: start;
   text-align: center;
 
   padding: 10px 10px;
@@ -20,4 +22,18 @@
   width: 100%;
   height: 50%;
   padding: 10px 10px;
+}
+
+.skills-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.skill-button {
+  width: 90px;
+  padding: 5px 5px;
+  margin: 5px;
+  border-radius: 5px;
 }
