--- a/src/stylesheets/education.css
+++ b/src/stylesheets/education.css
@@ -1,5 +1,7 @@
 .education-section-container {
+  /*
   background-color: #b6d7a8;
+  */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,6 +18,18 @@
   width: 100%;
   padding: 10px 10px;
   font-size: medium;
+}
+
+/* Wavy Background */
+.education-background {
+  background-image: url("../resources/education-section-background.svg");
+  /*
+  aspect-ratio: 960/300;
+  */
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 @media screen and (min-width: 700px) {
