--- a/src/stylesheets/profile.css
+++ b/src/stylesheets/profile.css
@@ -1,5 +1,7 @@
 .profile-section-container {
+  /*
   background-color: #9fc5e8;
+  */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,6 +19,18 @@
   padding: 10px 0px;
   font-size: medium;
 }
+
+/* Wavy Background */
+.profile-background {
+  background-image: url("../resources/profile-section-background.svg");
+  aspect-ratio: 960/300;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+/* Wavy Backgound */
 
 @media screen and (min-width: 700px) {
   .profile-section-container {
