--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -44,6 +44,7 @@
   margin: 0 0;
   padding: 5px 10px;
   background-color: #e9e9e9;
+  color: black;
 }
 
 .card-footer {
@@ -70,6 +71,15 @@
   padding: 5px 5px;
   margin: 5px;
   border-radius: 5px;
+}
+
+/* Wavy Background */
+.project-background {
+  background-image: url("../resources/project-section-background.svg");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 @media screen and (min-width: 700px) {
