--- a/src/stylesheets/profile.css
+++ b/src/stylesheets/profile.css
@@ -1,11 +1,9 @@
 .profile-section-container {
-  /*
-  background-color: #9fc5e8;
-  */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: white;
 }
 
 .picture {
