--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -1,76 +1,22 @@
 .projects-section-container {
   background-color: #ead1dc;
   display: flex;
-  flex-direction: column;
-}
-
-.projects {
-  display: flex;
-  justify-content: space-evenly;
-  padding: 10px 10px;
-  text-align: left;
-}
-
-.card {
-  background-color: #0275d8;
-  width: 300px;
-  height: 270px;
-  font-size: small;
-  text-align: left;
-  border-radius: 10px;
-  margin: 10px;
-}
-
-.card-title {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 10%;
-  background-color: #0275d8;
-  color: white;
-
-  border-radius: 10px;
-}
-
-.card-title h4 {
-  margin: 0 0;
-  padding-left: 5px;
-}
-
-.card-content {
-  width: 100%;
-  height: 80%;
-  margin: 0 0;
-  padding: 5px 10px;
-  background-color: #e9e9e9;
-  color: black;
-}
-
-.card-footer {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 10%;
-  background-color: #0275d8;
-  color: white;
-
-  border-radius: 10px;
-}
-
-.source-code-panel {
-  display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.source-code-button {
-  width: 300px;
-  padding: 5px 5px;
-  margin: 5px;
-  border-radius: 5px;
+.projects {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px 10px;
+}
+
+.project-description {
+  width: 50%;
 }
 
 /* Wavy Background */
@@ -82,45 +28,17 @@
   background-size: cover;
 }
 
-@media screen and (min-width: 900px) {
+/* Desktop end rules */
+@media screen and (min-width: 700px) {
   .projects-section-container {
     flex-direction: row;
     font-size: 30px;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
   }
 
   .projects {
     flex-direction: column;
-  }
-
-  .source-code-panel {
-    width: 40%;
-    margin: 10px;
-  }
-
-  .source-code-button {
-    width: 400px;
-    padding: 5px 5px;
-    margin: 5px;
-    border-radius: 5px;
-  }
-
-  .card {
-    width: 450px;
-    height: 370px;
-    font-size: 25px;
-  }
-
-  .card-title {
-    height: 15%;
-  }
-
-  .card-content {
-    height: 70%;
-  }
-
-  .card-footer {
-    height: 15%;
+    flex-wrap: wrap;
   }
 }
